Table sources {
  source_id int [pk, increment]
  source_name varchar(100) [not null, unique]
  base_url varchar(255)
  country varchar(100)

  created_at timestamp
  updated_at timestamp
}

Table companies {
  company_id int [pk, increment]
  company_name varchar(255) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table locations {
  location_id int [pk, increment]

  country varchar(100) [not null]
  state varchar(100)
  county varchar(100)
  city varchar(100)

  display_name varchar(255)

  latitude decimal(10,6)
  longitude decimal(10,6)

  created_at timestamp
  updated_at timestamp
}

Table categories {
  category_id int [pk, increment]

  category_tag varchar(100) [not null]
  category_name varchar(255) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table jobs {
  job_id varchar(20) [pk]

  title varchar(255) [not null]
  description text

  salary_min decimal(10,2)
  salary_max decimal(10,2)
  salary_average decimal(10,2)

  salary_predicted boolean

  contract_type varchar(50)
  contract_time varchar(50)

  created_date datetime

  redirect_url text
  adref text

  extraction_timestamp datetime not null default current_timestamp
  is_active boolean not null not null default True

  company_id int [not null]
  location_id int [not null]
  category_id int [not null]
  source_id int [not null]
}


Ref: jobs.company_id > companies.company_id
Ref: jobs.location_id > locations.location_id
Ref: jobs.category_id > categories.category_id
Ref: jobs.source_id > sources.source_id
